# AutoAgent

./: .env.example  .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-16-plan-completion.md
scripts/: user_smoke_test.sh
src/autoagent/: __init__.py  config.py  executor.py  history_tree.py  llm.py  memory.py  models.py  orchestrator.py  output_locale.py  plan_enrichment.py  prompts.py  react.py  report.py  run_state.py  task_mode.py  worker.py
src/autoagent/cli/: __init__.py  app.py  display.py  run_flow.py
src/autoagent/dag/: __init__.py  plan_mutator.py  scheduler.py
src/autoagent/tools/: __init__.py  api.py  base.py  browser.py  file_tools.py  presets.py  python_sandbox.py  web.py
src/autoagent/utils/: __init__.py  logging.py  tokens.py
src/autoagent/web/: __init__.py  api.py  serializers.py  service.py  store.py
src/autoagent/web/static/: app.js  dag-graph.js  i18n.js  index.html  styles.css
tests/: conftest.py  test_api_async.py  test_config_persist.py  test_dag_scheduler.py  test_history_tree.py  test_llm_cli_config.py  test_memory.py  test_models.py  test_optional_tools.py  test_orchestrator.py  test_output_locale.py  test_plan_enrichment.py  test_plan_mutator.py  test_react.py  test_react_memory.py  test_report.py  test_run_snapshot.py  test_task_mode.py  test_tool_presets.py  test_tools.py  test_utils.py  test_web.py  test_worker.py
