[project]
name = "autoagent"
version = "0.1.0"
description = "Production-oriented autonomous agent framework with planning, tools, memory, and CLI."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "AutoAgent Contributors" }]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.2",
    "litellm>=1.51.0",
    "loguru>=0.7.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "rich>=13.9.2",
    "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "bandit>=1.7.10",
]
browser = ["playwright>=1.48.0"]
vector = ["chromadb>=0.5.15"]

[project.scripts]
autoagent = "autoagent.cli:app"

[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoagent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "C4", "SIM", "PTH"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=autoagent --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"
